[package]
name = "zmq-tokio"
version = "0.1.0"
authors = ["Andreas Rottmann <a.rottmann@gmx.at>"]
license = "MIT/Apache-2.0"
description = "Tokio integation for zeromq"
repository = "https://github.com/erickt/zmq-tokio"
readme = "README.md"

[dependencies]
mio = "0.6.0"
tokio-core = "0.1"
futures = "0.1.3"
zmq = { git = "https://github.com/erickt/rust-zmq" }
