[package]
name = "zmq-tokio"
version = "0.0.1"
authors = ["Andreas Rottmann <a.rottmann@gmx.at>"]
license = "MIT/Apache-2.0"
description = "Tokio integation for zeromq"
repository = "https://github.com/rotty/zmq-tokio"
readme = "README.md"

[dependencies]
mio = "0.6"
tokio-core = "0.1"
tokio-io = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
zmq = { git = "https://github.com/erickt/rust-zmq" }
log = "0.3"
env_logger = "0.3"
zmq-mio = { path = "zmq-mio" }
