[package]
name = "zmq-mio"
version = "0.0.1"
authors = ["Andreas Rottmann <a.rottmann@gmx.at>"]
license = "MIT/Apache-2.0"
description = "mio integation for zeromq"
repository = "https://github.com/rotty/zmq-tokio"
readme = "README.md"

[dependencies]
log = "0.3"
env_logger = "0.3"
futures = "0.1.3"
mio = "0.6.0"
zmq = { path = "/home/rotty/src/crates/zmq" }
